fix header spacing in guides and update footer text to be white

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_standards-overrides.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_standards-overrides.scss
@@ -2,10 +2,16 @@
 
 footer.site-footer.site-footer .fat {
   padding: 2rem 0 6rem 0;
+  section a:link{
+    color:white;
+  }
 }
 
 footer.site-footer.site-footer .fat h1, footer.site-footer.site-footer .fat h2, footer.site-footer.site-footer .fat h3, footer.site-footer.site-footer .fat h4, footer.site-footer.site-footer .fat h5, footer.site-footer.site-footer .fat h6{
   font-size: 1.3rem;
+  section a:link{
+    color:white;
+  }
 }
 
 .label, label {
